fix: playlist long text wrap

--- a/music-app/src/styles.scss
+++ b/music-app/src/styles.scss
@@ -320,3 +320,13 @@ header {
     width: 20px !important;
   }
 }
+
+.text-wrap {
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  word-break: break-all;
+}
